# afilmorys

./: .env.docker.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.core  README.md  bump.config.ts  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/docs/: package.json  tsconfig.app.json  tsconfig.node.json
apps/docs/src/components/: HeaderLogoSection.tsx
apps/ssr/: package.json
apps/web/: package.json  tsconfig.json
apps/web/src/atoms/: app.ts  hydration.ts  viewer.ts
apps/web/src/components/common/: HydrationEndDetector.tsx
apps/web/src/hooks/: useHasActiveFilters.ts  usePhotoViewer.ts  useViewport.ts
apps/web/src/modules/cmdk/: CommandPalette.tsx
apps/web/src/modules/gallery/: DateRangePicker.tsx  (+3 more)
apps/web/src/providers/: root-providers.tsx
be/: package.json  tsconfig.json
be/apps/core/: docker-entrypoint.sh  package.json  tsconfig.json  vite.config.ts
be/apps/dashboard/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
be/apps/oauth-gateway/: Dockerfile  package.json
docs/: deploy-1panel.md
docs/superpowers/specs/: 2026-04-26-variant-cluster-report-design.md  2026-06-03-gallery-date-range-filter-design.md  2026-06-03-photo-upload-thumbnails-design.md
locales/app/: en.json  jp.json  ko.json  zh-CN.json  zh-HK.json  zh-TW.json
locales/dashboard/: en.json  zh-CN.json
scripts/: prepare-demo-data.sh
scripts/clip-embedder/: .gitignore  README.md  embed.py  pyproject.toml
scripts/clip-spike/: .gitignore  README.md  embed.py  pyproject.toml  search.py
(+54 files in other folders)
